# hydro-insar-swin-inversion

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: entrypoint.sh
configs/: emilia_romagna.example.yaml
docs/: CONTAINER_USAGE.md  DATA_LAYOUT.md  ROADMAP.md
examples/: emilia_romagna.md  synthetic_demo.md
scripts/: README.md
src/hydro_insar_swin_inversion/: cli.py  config.py  demo.py
